# InfraCopilot

./: AI_HEALING.md  CHANGELOG.md  CONTRIBUTING.md  ENHANCEMENT_SUMMARY.md  GENERATOR_ENHANCEMENTS.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  UX_ENHANCEMENTS.md  example.sh  pyproject.toml
devops_ai/: __init__.py  doctor.py  main.py  ui.py  utils.py
devops_ai/commands/: __init__.py  cost_cmd.py  diagnose_cmd.py  diagram_cmd.py  generate_cmd.py  init_cmd.py
devops_ai/cost/: __init__.py  optimizer.py
devops_ai/diagnostics/: __init__.py  analyzer.py
devops_ai/diagram/: __init__.py  generator.py
devops_ai/generators/: __init__.py  base.py  dockerfile.py  github_actions.py  kubernetes.py  terraform.py
devops_ai/healing/: __init__.py  detector.py  fixer.py  runner.py
devops_ai_copilot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: conftest.py  test_cost.py  test_diagnostics.py  test_diagram.py  test_generators.py  test_healing.py  test_imports.py  test_utils.py
